<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
 
   <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dip" >
        
       
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:text="@string/reg"
            android:textSize="30sp"
            android:textStyle="bold" />
      
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/name" />
        
         <LinearLayout android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            
        <EditText
            android:id="@+id/etname"
            android:inputType="text"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
         
        <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:visibility="invisible"
        android:id="@+id/wrong_name"
        android:contentDescription="@string/hint_wrong"
        android:src="@drawable/ic_wrong" />
        
         </LinearLayout>
       
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dip"
            android:text="@string/password_signup" />
        
        <LinearLayout android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        
        <EditText
            android:id="@+id/etpassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/pass_hint" 
            android:layout_weight="1"/>
        
        <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:visibility="invisible"
        android:id="@+id/wrong_pass"
        android:contentDescription="@string/hint_wrong"
        android:src="@drawable/ic_wrong" />
        
        </LinearLayout>
        
         <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dip"
            android:text="@string/gender" />
         
         <RadioGroup 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    
    <RadioButton android:id="@+id/radio_male"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/male"
        android:onClick="onRadioButtonClicked"/>
    
    <RadioButton android:id="@+id/radio_female"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/female"
        android:onClick="onRadioButtonClicked"
        android:layout_marginLeft="50dp"/>

    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginLeft="20dp"
        android:visibility="invisible"
        android:id="@+id/wrong_gender"
        android:contentDescription="@string/hint_wrong"
        android:src="@drawable/ic_wrong" />

</RadioGroup>

          <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dip"
            android:text="@string/birth" 
            />
          
          <LinearLayout android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:orientation="horizontal">
              
               <EditText
            android:id="@+id/etbirth"
            android:layout_width="0dp"
            android:hint="@string/date_hint"
            android:layout_height="wrap_content"
            android:layout_weight="1"
             />
               
               <ImageButton android:layout_width="40dp"
                   android:scaleType="fitXY"
                   android:background="#347C17"
                   android:contentDescription="@string/date_hint"
                   android:layout_height="40dp"
                   android:id="@+id/datepicker"
                   android:src="@drawable/ic_menu_my_calendar"/>
               
          </LinearLayout>
         
          
        
        <Button
            android:id="@+id/signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:text="@string/signup_email"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="@drawable/login_button" />

        <Button
            android:id="@+id/btnLinkToLoginScreen"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dip"
            android:background="@drawable/login_button"
            android:text="@string/logme"
            android:textColor="@color/white"
            android:textStyle="bold" />
     
    </LinearLayout>
 
</ScrollView>