<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:weightSum="100" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:background="@color/light_grey" >

        <ImageView
            android:id="@+id/profilepic"
            android:layout_width="@dimen/thumbnail_width"
            android:layout_height="@dimen/thumbnail_height"
            android:contentDescription="@string/pimage"
            android:src="@drawable/loading_image" 
            />

        <TextView
            android:id="@+id/tv_name"
            android:layout_marginLeft="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/profilepic"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </RelativeLayout>
    <LinearLayout android:layout_weight="80"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        
   <EditText android:gravity="top"
       android:layout_width="match_parent"
       android:layout_height="250dp"
       android:id="@+id/status_content"
       android:hint="@string/status_hint"
       android:hapticFeedbackEnabled="true"/>
    </LinearLayout>
    
    <RelativeLayout android:layout_weight="20"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background="@color/light_grey">

        <ImageButton
            android:id="@+id/update_status"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/ic_action_send"
            android:contentDescription="@string/update_status" />

        <ImageButton
            android:id="@+id/attach_photo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/ic_action_photo"
            android:contentDescription="@string/attach_photo" />

        <ImageButton
            android:id="@+id/mood"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/update_status"
            android:contentDescription="@string/mood"
            android:src="@drawable/ic_menu_emoticons" />
        
        <ImageButton android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_media_video_poster"
            android:layout_toRightOf="@id/attach_photo"
            android:scaleType="fitXY"
            android:contentDescription="@string/video"
            android:id="@+id/attach_video"/>

       
        
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/selected_image"
            android:layout_width="@dimen/thumbnail_width"
            android:layout_height="@dimen/thumbnail_height" />

        <TextView
            android:id="@+id/tv_selected_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/img_select"
            android:visibility="invisible"
            android:layout_marginLeft="5dp"
            android:paddingTop="20dp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>