<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/llsingup"
    android:padding="5dp"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/etemail_signup"
        android:layout_width="@dimen/width260"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:drawableLeft="@drawable/email"
        android:drawablePadding="@dimen/padding_small"
        android:ems="10"
        android:hint="@string/email"
        android:imeOptions="flagNoExtractUi"
        android:inputType="textEmailAddress"
        android:textSize="@dimen/text_size_small" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/blogin_signup"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etemail_signup"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:background="@drawable/login_button"
        android:text="@string/forward"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_medium"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/code_got"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/code_got"
        android:textAppearance="?android:attr/textAppearanceMedium"
         />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/etemail_signup"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="42dp"
        android:text="@string/signup_code_desc"
        android:textAppearance="?android:attr/textAppearanceMedium"
         />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView2"
        android:layout_alignRight="@+id/etemail_signup"
        android:layout_marginBottom="38dp"
        android:text="@string/enter_your_email"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/background"
        android:textStyle="bold" />

</RelativeLayout>
