<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
 <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_grey" >

        <ImageView
            android:id="@+id/profilepic_question"
            android:layout_width="@dimen/thumbnail_width"
            android:layout_height="@dimen/thumbnail_height"
            android:contentDescription="@string/pimage"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:id="@+id/tv_name_question"
            android:layout_marginLeft="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/profilepic_question"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </RelativeLayout>
  
 
  <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        
   <EditText android:gravity="top"
       android:layout_width="match_parent"
       android:layout_height="100dp"
       android:id="@+id/question_content"
       android:hint="@string/question_hint"
       android:hapticFeedbackEnabled="true"/>
   </LinearLayout>
   
  
   <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

       <EditText
           android:id="@+id/new_option"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:hint="@string/options_normal"
           android:layout_weight="1"/>
       
       
       <Button
           android:id="@+id/add_option"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/add_options"
           style="?android:attr/buttonStyle"
           android:background="@drawable/login_button"
           android:textColor="@color/white"
           android:textStyle="bold"/>    
       
       <Button
           android:id="@+id/ask"
           style="?android:attr/buttonStyle"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/ask" 
           android:background="@drawable/login_button"
           android:textColor="@color/white"
           android:textStyle="bold"/>
</LinearLayout>
    
   
    <ListView android:id="@+id/lv_options"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"/>
    
</LinearLayout>
