<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background"
    android:padding="@dimen/padding_tiny" >

    <EditText
        android:id="@+id/etemail"
        android:layout_width="@dimen/width260"
        android:layout_height="wrap_content"
        android:background="@drawable/login_box"
        android:drawableLeft="@drawable/email"
        android:drawablePadding="@dimen/padding_small"
        android:ems="10"
        android:hint="@string/email"
        android:imeOptions="flagNoExtractUi"
        android:inputType="textEmailAddress"
        android:textSize="@dimen/text_size_small"
        android:layout_below="@+id/ivlogo"
        android:layout_alignLeft="@+id/ivlogo"
        android:layout_alignStart="@+id/ivlogo"
        android:layout_marginTop="112dp">

        <requestFocus />
    </EditText>

    <ImageView
        android:id="@+id/ivlogo"
        android:layout_width="fill_parent"
        android:layout_height="10dp"
        android:contentDescription="@string/quipmate_image"
        android:src="@drawable/quipmate_logo"
        android:layout_above="@+id/blogin"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/frameLayout2" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/blogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" >

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        <TextView
            android:id="@+id/errormessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </FrameLayout>

    <TextView
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/signup"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/frameLayout2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

    </FrameLayout>

    <Button
        android:id="@+id/blogin"
        android:layout_width="@dimen/width260"
        android:layout_height="wrap_content"
        android:background="@drawable/login_button"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_medium"
        android:textStyle="bold"
        android:layout_gravity="left|center_vertical"
        android:layout_above="@+id/signup"
        android:layout_alignLeft="@+id/signup"
        android:layout_alignStart="@+id/signup" />

</RelativeLayout>